# RMusicDL

./: .deepsource.toml  .eslintignore  .eslintrc.json  .gitignore  .prettierrc  LICENSE  README.md  ReactDL.aip  index.html  jest.config.ts  ormconfig.json  package-lock.json  package.json  prettierrc.json  reactdl.sqlite  reactdl.sqlite-shm  reactdl.sqlite-wal  renderer.d.ts  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
UI_Design/: reactDL.epgz
src/: App.tsx  Types.ts  bridge.ts  main.ts  main.tsx  router.tsx  styles.css  theme.ts
src-tauri/: .taurignore  Cargo.toml  archive.txt  mydatabase.db-shm  mydatabase.db-wal  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: entities.rs  main.rs  types.rs
src-tauri/src/repositories/: downloading_profile_repository.rs  playlist_repository.rs
src/Mapper/: DownloadingProfileMapper.ts  PlaylistMapper.ts
src/Pages/: Playlists.tsx
src/components/Playlist/: AddPlaylistForm.tsx  Header.tsx  PlaylistsTable.tsx
src/components/Playlists/: AddPlaylistForm.tsx  EditForm.tsx  Header.tsx  PlaylistsTable.tsx
src/components/common/: SideBar.tsx
src/context/: bridgeContext.tsx
src/fakedata/: index.ts
src/hooks/: UseWindowSize.ts  useBrige.ts
src/main/: api.ts  main.ts  preload.tsx
src/main/Database/: index.ts
src/main/Database/Models/: DownloadingProfile.ts  Playlist.ts
src/main/Database/Repository/: DownloadingProfileRepository.ts  PlaylistRepository.ts
src/redux/: store.ts
src/redux/Playlists/: slice.ts
src/redux/UI/: slice.ts
src/renderer/: App.tsx  Application.tsx  Navigation.tsx  constants.ts  index.html  renderer.tsx
src/renderer/components/: Application.tsx  Footer.tsx  Header.tsx  RouteSideBar.tsx
src/renderer/components/common/: CustomDialog.tsx
src/renderer/components/playlists/: CustomToolbar.tsx  DataTable.tsx  GridFooter.tsx  PlaylistCard.tsx
src/renderer/contexts/: SettingsContext.tsx
src/renderer/hooks/: useLoadedResources.tsx  useSettings.ts  useWindowDimensions.tsx
src/renderer/redux/store/: index.ts
src/renderer/theme/: index.ts  shadows.ts
src/renderer/types/: index.ts
tests/unit/: api.test.ts
tools/forge/: forge.config.js
tools/webpack/: webpack.aliases.js  webpack.helpers.js  webpack.main.js  webpack.plugins.js  webpack.renderer.js  webpack.rules.js
(+22 files in other folders)
