[package]
name = "rmusicdl"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
youtube_dl = { version= "^0.8.1", features = ["downloader"] } 
once_cell = "1.8.0"
tokio = { version = "1", features = ["full"] }
ffmpeg-sidecar = "0.4.1"
reqwest = "0.11.18"
tar = "0.4.38"
sqlx = { version = "0.7.0", features = ["runtime-tokio", "macros", "sqlite"] }
chrono = "0.4.26"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
